# hibari

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
src/hibari/: cli.py  config.py  encode.py  script.py  timesheet.py
src/hibari/sample_project/: timesheet.txt
src/hibari/sample_project/.config/: config.toml
