[build-system]
requires = ["flit_core >=3.11,<5"]
build-backend = "flit_core.buildapi"

[project]
name = "hibari"
description = "A simple tool for [re]creating animation"
authors = [{name = "iearch", email = "iearch19@gmail.com"}]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version"]
requires-python = ">=3.12"
keywords = [
    "video",
    "animation",
    "encoding",
    "vapoursynth",
]
classifiers = [
    "Topic :: Multimedia :: Graphics",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
]
dependencies = [
    "vapoursynth>=75,!=76",
    "vapoursynth-bestsource>=17.0",
    "vapoursynth-lsmas",
    "jetpytools>=2.2.7",
    "vsjetpack>=1.5.0",
    "vsview>=0.6.1",
    "typer>=0.24.0",
    "natsort>=8.1.0",
]

[project.scripts]
hibari = "hibari.cli:app"
